--- a/imageviewer/build.gradle
+++ b/imageviewer/build.gradle
@@ -1,16 +1,16 @@
-apply plugin: 'com.android.library'
-apply plugin: 'kotlin-android'
-apply plugin: 'maven-publish'
+plugins {
+    id 'com.android.library'
+    id 'org.jetbrains.kotlin.android'
+}
 
 android {
-    buildToolsVersion rootProject.ext.buildToolsVersion
-    compileSdkVersion rootProject.ext.compileSdkVersion
-
+    namespace 'com.github.iielse.imageviewer'
+    compileSdk 34
     defaultConfig {
-        minSdkVersion rootProject.ext.minSdkVersion
-        targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode rootProject.ext.versionCode
-        versionName rootProject.ext.versionName
+        minSdk 23
+        targetSdk 34
+        versionCode 1
+        versionName "1.0"
     }
 
     buildFeatures.viewBinding = true
@@ -28,30 +28,16 @@ android {
 }
 
 dependencies {
-    implementation 'androidx.appcompat:appcompat:1.3.1'
-    implementation 'androidx.core:core-ktx:1.6.0'
+    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'androidx.core:core-ktx:1.12.0'
     implementation 'androidx.transition:transition:1.4.1'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation 'androidx.paging:paging-runtime-ktx:3.0.1'
     implementation 'androidx.viewpager2:viewpager2:1.0.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'com.google.android.exoplayer:exoplayer:2.15.0'
-    implementation 'com.github.chrisbanes:PhotoView:2.2.0'
+    implementation "androidx.media3:media3-exoplayer:1.0.0"
+    implementation "androidx.media3:media3-exoplayer-dash:1.0.0"
+    implementation "androidx.media3:media3-ui:1.0.0"
+    implementation 'com.github.kevinvane:PhotoView:v1.0'
     implementation 'com.davemorrissey.labs:subsampling-scale-image-view-androidx:3.10.0'
-}
-
-task androidSourcesJar(type: Jar) {
-    classifier 'sources'
-    from android.sourceSets.main.java.srcDirs
-}
-
-project.afterEvaluate {
-    publishing {
-        publications {
-            release(MavenPublication) {
-                from components.release
-                artifact androidSourcesJar // optional sources
-            }
-        }
-    }
 }
